--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
   <body>
     {{content-for "body"}}
 
+    <div id="app-graphics"></div>
+
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/app-graphics.js"></script>
 
